src/os/bluestore/BlueStore.cc
@@ -8065,7 +8065,7 @@ void BlueStore::_txc_finish(TransContext *txc)
   if (submit_deferred) {
     // we're pinning memory; flush!  we could be more fine-grained here but
     // i'm not sure it's worth the bother.
-    deferred_try_submit();
+    deferred_submit_all();
   }
 
   if (empty && osr->zombie) {
@@ -8128,7 +8128,7 @@ void BlueStore::_osr_drain_all()
   ++deferred_aggressive;
   {
     // submit anything pending
-    deferred_try_submit();
+    deferred_submit_all();
   }
   {
     // wake up any previously finished deferred events
@@ -8540,7 +8540,7 @@ void BlueStore::_kv_finalize_thread()
       if (!deferred_aggressive) {
 	if (deferred_queue_size >= deferred_batch_ops.load() ||
 	    throttle_deferred_bytes.past_midpoint()) {
-	  deferred_try_submit();
+	  deferred_submit_all();
 	}
       }
 
@@ -8569,7 +8569,7 @@ void BlueStore::_deferred_queue(TransContext *txc)
   dout(20) << __func__ << " txc " << txc << " osr " << txc->osr << dendl;
   deferred_lock.lock();
   if (!txc->osr->deferred_pending &&
-      !txc->osr->deferred_running) {
+      txc->osr->deferred_running.empty()) {
     deferred_queue.push_back(*txc->osr);
   }
   if (!txc->osr->deferred_pending) {
@@ -8587,15 +8587,14 @@ void BlueStore::_deferred_queue(TransContext *txc)
 	cct, wt.seq, e.offset, e.length, p);
     }
   }
-  if (deferred_aggressive &&
-      !txc->osr->deferred_running) {
+  if (deferred_aggressive) {
     _deferred_submit_unlock(txc->osr.get());
   } else {
     deferred_lock.unlock();
   }
 }
 
-void BlueStore::deferred_try_submit()
+void BlueStore::deferred_submit_all()
 {
   dout(20) << __func__ << " " << deferred_queue.size() << " osrs, "
 	   << deferred_queue_size << " txcs" << dendl;
@@ -8606,7 +8605,7 @@ void BlueStore::deferred_try_submit()
     osrs.push_back(&osr);
   }
   for (auto& osr : osrs) {
-    if (osr->deferred_pending && !osr->deferred_running) {
+    if (osr->deferred_pending) {
       _deferred_submit_unlock(osr.get());
       deferred_lock.lock();
     }
@@ -8619,13 +8618,12 @@ void BlueStore::_deferred_submit_unlock(OpSequencer *osr)
 	   << " " << osr->deferred_pending->iomap.size() << " ios pending "
 	   << dendl;
   assert(osr->deferred_pending);
-  assert(!osr->deferred_running);
 
   auto b = osr->deferred_pending;
   deferred_queue_size -= b->seq_bytes.size();
   assert(deferred_queue_size >= 0);
 
-  osr->deferred_running = osr->deferred_pending;
+  osr->deferred_running.push_back(osr->deferred_pending);
   osr->deferred_pending = nullptr;
 
   uint64_t start = 0, pos = 0;
@@ -8671,21 +8669,15 @@ void BlueStore::_deferred_submit_unlock(OpSequencer *osr)
 void BlueStore::_deferred_aio_finish(OpSequencer *osr)
 {
   dout(10) << __func__ << " osr " << osr << dendl;
-  assert(osr->deferred_running);
-  DeferredBatch *b = osr->deferred_running;
+  DeferredBatch *b;
 
   {
     std::lock_guard<std::mutex> l(deferred_lock);
-    assert(osr->deferred_running == b);
-    osr->deferred_running = nullptr;
-    if (!osr->deferred_pending) {
+    b = osr->deferred_running.front();
+    osr->deferred_running.pop_front();
+    if (osr->deferred_running.empty() && !osr->deferred_pending) {
       auto q = deferred_queue.iterator_to(*osr);
       deferred_queue.erase(q);
-    } else if (deferred_aggressive) {
-      dout(20) << __func__ << " queuing async deferred_try_submit" << dendl;
-      finishers[0]->queue(new FunctionContext([&](int) {
-	    deferred_try_submit();
-	  }));
     }
   }
 
@@ -8821,7 +8813,7 @@ int BlueStore::queue_transactions(
   if (txc->deferred_txn) {
     // ensure we do not block here because of deferred writes
     if (!throttle_deferred_bytes.get_or_fail(txc->cost)) {
-      deferred_try_submit();
+      deferred_submit_all();
       throttle_deferred_bytes.get(txc->cost);
     }
   }
